fix increase in width in mobile and text align center

--- a/src/App.scss
+++ b/src/App.scss
@@ -3666,6 +3666,7 @@ body.scroll-disabled {
 
     .navbar-right {
       order: 2;
+      text-align: center;
       &:hover {
         width: 3rem;
       }
